package model.enums;

public enum ProductCategory {
	ROUPA,
	ELETRONICO,
	ESCRITORIO,
	COMIDA,
	BEBIDA,
	HIGIENE_PESSOAL,
	LIVRO
}
