@startuml
skinparam classAttributeIconSize 0

package application {
  interface OutputService
  class ConsoleOutputService
  class UserInputService
}

package model {
  class Inventory
  class Product
  class ProductItem
  enum ProductCategory
}

ConsoleOutputService ..|> OutputService
UserInputService --> OutputService

Inventory o-- "0..*" ProductItem
ProductItem --> Product
Product --> ProductCategory

@enduml
